<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
	            android:id="@+id/name_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/robot_name"
	            android:textSize="15sp"/>
	        
	        <TextView 
		        android:id="@+id/name_value_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"/>
	        
	        <Button 
	            android:id="@+id/connect_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_connect"/>
	        
	        <Button 
	            android:id="@+id/disconnect_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_disconnect"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
	            android:id="@+id/address_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/robot_address"
	            android:textSize="15sp"/>
	        
	        <TextView 
		        android:id="@+id/address_value_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"/>
	        
	    </LinearLayout>
	    
	    <Button 
	        android:id="@+id/stop_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/button_stop"/>
	    
	    <Button 
	        android:id="@+id/forward_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/button_forward"/>
	    
	    <Button 
	        android:id="@+id/back_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/button_backward"/>
	    
	    <Button 
	        android:id="@+id/left_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/button_left"/>
	    
	    <Button 
	        android:id="@+id/right_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/button_right"/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <Button 
		        android:id="@+id/froward_left_one_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_left_one"/>
		    
		    <Button 
		        android:id="@+id/froward_left_two_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_left_two"/>
		    
		    <Button 
		        android:id="@+id/froward_left_three_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_left_three"/>
		    
		    <Button 
		        android:id="@+id/froward_left_four_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_left_four"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        
	        android:orientation="horizontal">
	    
	        <Button 
		        android:id="@+id/froward_right_one_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_right_one"/>
	    
		    <Button 
		        android:id="@+id/froward_right_two_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_right_two"/>
		    
		    <Button 
		        android:id="@+id/froward_right_three_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_right_three"/>
		    
		    <Button 
		        android:id="@+id/froward_right_four_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_froward_right_four"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    
	        <Button 
		        android:id="@+id/back_right_one_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_left_one"/>
	    
		    <Button 
		        android:id="@+id/back_right_two_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_left_two"/>
		    
		    <Button 
		        android:id="@+id/back_right_three_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_left_three"/>
		    
		    <Button 
		        android:id="@+id/back_right_four_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_left_four"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <Button 
		        android:id="@+id/back_left_one_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_right_one"/>
	    
		    <Button 
		        android:id="@+id/back_left_two_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_right_two"/>
		    
		    <Button 
		        android:id="@+id/back_left_three_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_right_three"/>
		    
		    <Button 
		        android:id="@+id/back_left_four_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_backward_right_four"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <Button 
		        android:id="@+id/top_header_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_up_header"/>
		    
		    <Button 
		        android:id="@+id/bottom_header_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_down_header"/>
		    
		    <Button 
		        android:id="@+id/open_infra_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_open_infra"/>
		    
		    <Button 
		        android:id="@+id/close_infra_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_close_infra"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <Button 
		        android:id="@+id/speed_one"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_speed_35"/>
		    
		    <Button 
		        android:id="@+id/speed_two"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_speed_40"/>
		    
		    <Button 
		        android:id="@+id/speed_three"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_speed_45"/>
	
	        
	    </LinearLayout>
	    
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical">
	            
	            <Button 
			        android:id="@+id/search_infra_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/button_search_infra"/>
	            
	            <TextView 
		            android:id="@+id/infra_value_text_view"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/infra_value"
		            android:textSize="15sp"/>
	            
			</LinearLayout>
			
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical">
	            
			    <Button 
			        android:id="@+id/search_voltage_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/button_search_voltage"/>
	            
				<TextView 
		            android:id="@+id/voltage_value_text_view"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/voltage_value"
		            android:textSize="15sp"/>
	            
			</LinearLayout>
			
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical">
	            
			    <Button 
			        android:id="@+id/search_robot_version_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/button_search_robot_version"/>
	            
	            <TextView 
		            android:id="@+id/version_value_text_view"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/version_value"
		            android:textSize="15sp"/>
	            
			</LinearLayout>
			
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical">
	            
			    <Button 
			        android:id="@+id/search_robot_speed_button"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/button_search_robot_speed"/>
	            
	            <TextView 
		            android:id="@+id/speed_value_text_view"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/speed_value"
		            android:textSize="15sp"/>
	            
			</LinearLayout>
	        
	    </LinearLayout>
	    
	  <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    
	        <Button 
		        android:id="@+id/start_autocharge"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_start_autocharge"/>
	        
	        <Button 
		        android:id="@+id/stop_autocharge"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/button_stop_autocharge"/>
	
	    </LinearLayout>
	    
	    <Button 
	        android:id="@+id/back"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:background="#32CD32"
	        android:layout_marginTop="30dp"
	        android:text="@string/button_back"/>
	
	</LinearLayout>
	
</ScrollView>
