<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
         <LinearLayout 
	        android:id="@+id/device_name_layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
	            android:id="@+id/device_name_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/robot_name"
	            android:textSize="15sp"/>
	        
	        <TextView 
		        android:id="@+id/device_name_value_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/device_address_layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
	            android:id="@+id/device_address_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/bluetooth_address"
	            android:textSize="15sp"/>
	        
	        <TextView 
		        android:id="@+id/device_address_value_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"/>
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/device_connect_state_layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
	            android:id="@+id/device_connect_state_text_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/connection_status"
	            android:textSize="15sp"/>
	        
	        <TextView 
		        android:id="@+id/device_connect_state_value_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"/>
	        
	    </LinearLayout>
        
</LinearLayout>
